--- a/styles/carteirinha_sangue.css
+++ b/styles/carteirinha_sangue.css
@@ -1,3 +1,104 @@
+@media screen and (min-width: 720px) {
+  body{
+    font-family: var(--fonte-principal);
+  }
+  .retangulo{
+      width: 100%;
+      height: 79px;
+      flex-shrink: 0;
+      background-color: var(--cor-do-retangulo);
+  }
+  .carteirinha{
+      width: 100%;
+      height: 123px;
+      flex-shrink: 0;
+      color: var(--cor-do-titulo-carrossel);
+      text-align: center;
+      font-size: 50px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: normal;
+  }
+  .carteirinha_texto{
+      font-size: 30px;
+      text-align: justify;
+  }
+  .foto__carteirinha{
+      height: 23em;
+      width: 23em;
+  }
+    
+  .card6 {
+      position: relative;
+      width: 650px;
+      height: 400px;
+      background: var(--cor-branco);
+      border-radius: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+      transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+      margin: 3em;
+    }
+    
+    .card6 svg {
+      width: 48px;
+      fill: #333;
+      transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+    }
+    
+    .card6:hover {
+      transform: rotate(-5deg) scale(1.1);
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+    }
+    
+    .card__content6 {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%) rotate(-45deg);
+      width: 100%;
+      height: 100%;
+      padding: 20px;
+      box-sizing: border-box;
+      background-color: #fff;
+      opacity: 0;
+      transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+    }
+    
+    .card6:hover .card__content6 {
+      transform: translate(-50%, -50%) rotate(0deg);
+      opacity: 1;
+    }
+    
+    .card__description6 {
+      font-size: 1.6em;
+      color: var(--cor-preto);
+      line-height: 1.4;
+      margin: 1em;
+    }
+    
+    .card6:hover svg {
+      scale: 0;
+      transform: rotate(-45deg);
+    }
+  /* 768px - 1024px = telas menores, laptops */
+  @media screen and (min-width: 768px) {
+  .foto{
+      margin-top: -120%;
+      margin-left: 80%;
+  }
+  }
+  /* 1024px - 1200px = desktop */
+  @media screen and (min-width: 1024px) {
+      
+  }
+  }
+
+
+/* 1024px - 1200px = desktop */
+@media screen and (min-width: 1024px) {
 body{
   font-family: var(--fonte-principal);
 }
@@ -93,4 +194,5 @@ body{
 /* 1024px - 1200px = desktop */
 @media screen and (min-width: 1024px) {
     
+}
 }
