--- a/styles/como_doar_org.css
+++ b/styles/como_doar_org.css
@@ -1,3 +1,60 @@
+@media screen and (min-width: 720px) {
+    body{
+        font-family: var(--fonte-principal);
+    }
+    .retangulo{
+        width: 100%;
+        height: 71px;
+        flex-shrink: 0;
+        background-color: var(--cor-do-retangulo);
+    }
+    .comodoar_org{
+        width: 100%;
+        height: 123px;
+        flex-shrink: 0;
+        color: var(--cor-do-titulo-carrossel);
+        text-align: center;
+        font-size: 55px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+    }
+    .comodoar_texto{
+        color: var(--cor-preto);
+        margin-top: 3%;
+        margin-left: 2%;
+        text-align:left;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 27px;
+        font-style: normal;
+        font-weight: 30;
+        line-height: normal;
+    }
+    
+      .card10 {
+        cursor: pointer;
+        width: 600px;
+        height: 404px;
+        background: rgb(255, 255, 255);
+        border-radius: 5px;
+        border: 1px solid rgba(0, 0, 255, .2);
+        transition: all .2s;
+        box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
+        margin: 3em;
+       }
+       
+       .card10:hover {
+        box-shadow: -12px 12px 2px -1px rgba(0, 0, 255, .2);
+       }
+       .texto__como{
+        font-size: 30px;
+        margin: 3em;
+       }
+    }
+
+
+/* 1024px - 1200px = desktop */
+@media screen and (min-width: 1024px) {
 body{
     font-family: var(--fonte-principal);
 }
@@ -50,3 +107,4 @@ body{
     font-size: 30px;
     margin: 3em;
    }
+}
